# nova-stack

./: .env-example  .env.example  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  compose.yaml
.github/: pull_request_template.md  release.yml
.github/actions/backend-setup/: action.yml
.github/workflows/: README.md  ci.yml  pr-validation.yml
backend/: .dockerignore  .env-example  .env.example  Dockerfile  README.md  Taskfile.yml  entrypoint.sh  pyproject.toml
backend/src/app/: __init__.py  piccolo_conf.py
backend/src/backend/: __init__.py  db.py  piccolo_conf.py  schema.py
backend/src/backend/apps/users/graphql/: __init__.py  inputs.py  mutations.py  schema.py  types.py
backend/src/backend/config/: base.py  piccolo.py  piccolo_test.py
backend/src/freya_backend/: __init__.py
backend/tests/: conftest.py  test_health.py  test_user.py
backend/tests/apps/users/graphql/: test_mutations.py  test_queries.py
frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  README.md  Taskfile.yml  biome.json  codegen.yml  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/__tests__/: setup.tsx
frontend/e2e/: home.spec.ts
frontend/src/app/: layout.tsx  page.test.tsx  page.tsx
frontend/src/components/UserProfile/: GetUserById.graphql
frontend/src/lib/: ApolloClientProvider.client.tsx  apolloClient.server.ts  apolloClient.ts
frontend/src/stories/: Header.tsx  Page.tsx
postgres-init/: init.sql
