[project]
name = "app"
version = "0.1.0"
description = "Backend for Freya"
readme = "README.md"
authors = [
    { name = "M", email = "lmiguelvargasf@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litestar[standard]>=2.15.2",
    "piccolo-admin>=1.9.1",
    "piccolo[postgres]>=1.24.2",
    "pydantic-settings>=2.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
