[project]
name = "backend"
version = "0.1.0"
description = "Backend for Freya"
readme = "README.md"
authors = [
    { name = "M", email = "lmiguelvargasf@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litestar[standard]>=2.15.2",
    "loguru>=0.7.3",
    "piccolo-admin>=1.9.1",
    "piccolo[postgres]>=1.24.2",
    "pydantic-settings>=2.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.6",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=src"

[tool.coverage.run]
omit = [
    "src/backend/config/piccolo*.py",
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.venv"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
pythonVersion = "3.13"
